src/tests/snapshots/tera__tests__parser__parser_errors@multiple_unary_operator.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/multiple_unary_operator.txt
---
 Syntax error --> [multiple_unary_operator.txt:1:4]
  |
1 | {{ -- 1}}
  |     ^---
  = `-` and `not` cannot be used consecutively.
        
